@@ -1,3 +1,8 @@
+2013-02-13  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Fixed use of interpolation up to the last knot (in Q2, at least)
+	by making KnotArray1F::x/q2below never return the last index.
+
 2013-02-12  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Now installing pdfsets.index into the share dir.
